name:               ohloh-hs
version:            0.0.0
synopsis:           Interface to the Ohloh API
description:        <http://www.ohloh.net>
homepage:           https://github.com/fthomas/ohloh-hs
license:            BSD3
license-file:       LICENSE
author:             Frank S. Thomas <frank@timepit.eu>
maintainer:         Frank S. Thomas <frank@timepit.eu>
category:           Data
build-type:         Simple
cabal-version:      >= 1.9.2

source-repository head
  type:             git
  location:         https://github.com/fthomas/ohloh-hs

library
  exposed-modules:  Ohloh
                    Ohloh.Account
                    Ohloh.ActivityFact
                    Ohloh.Analysis
                    Ohloh.ContributorLanguageFact
                    Ohloh.Enlistment
                    Ohloh.Factoid
                    Ohloh.KudoScore
                    Ohloh.Language
                    Ohloh.Project
                    Ohloh.Repository
                    Ohloh.Response
                    Ohloh.SizeFact
                    Ohloh.Stack
                    Ohloh.StackEntry
  hs-source-dirs:   src
  build-depends:    base >= 4 && < 5,
                    hxt

executable cmdoh
  main-is:          cmdoh.hs
  hs-source-dirs:   src, tools
  ghc-options:      -Wall
                    -fno-warn-missing-signatures
                    -fno-warn-name-shadowing
  build-depends:    base >= 4 && < 5,
                    hxt,
                    cmdargs

executable subversion
  main-is:          subversion.hs
  hs-source-dirs:   src, tests
  ghc-options:      -Wall
                    -fno-warn-missing-signatures
                    -fno-warn-name-shadowing
  build-depends:    base >= 4 && < 5,
                    hxt,
                    pretty-show

test-suite tests
  type:             exitcode-stdio-1.0     
  main-is:          Main.hs
  hs-source-dirs:   src, tests
  ghc-options:      -Wall
                    -fno-warn-name-shadowing
  build-depends:    base >= 4 && < 5,
                    hxt,
                    test-framework,
                    test-framework-quickcheck2,
                    QuickCheck
