name:               ohloh-hs
version:            0.0.0
synopsis:           Interface to the Ohloh API
description:        <http://www.ohloh.net>
homepage:           https://github.com/fthomas/ohloh-hs
license:            BSD3
license-file:       LICENSE
author:             Frank S. Thomas <frank@timepit.eu>
maintainer:         Frank S. Thomas <frank@timepit.eu>
category:           Data
build-type:         Simple
cabal-version:      >= 1.9.2

source-repository head
  type:             git
  location:         https://github.com/fthomas/ohloh-hs

library
  exposed-modules:  Ohloh
                    Ohloh.Account
                    Ohloh.ActivityFact
                    Ohloh.Analysis
                    Ohloh.ContributorFact
                    Ohloh.ContributorLanguageFact
                    Ohloh.Enlistment
                    Ohloh.Factoid
                    Ohloh.Kudo
                    Ohloh.KudoScore
                    Ohloh.Language
                    Ohloh.Lens.IdL
                    Ohloh.Lens.NameL
                    Ohloh.Lens.UpdatedAtL
                    Ohloh.Project
                    Ohloh.Repository
                    Ohloh.Response
                    Ohloh.ResultType
                    Ohloh.SizeFact
                    Ohloh.Stack
                    Ohloh.StackEntry
  hs-source-dirs:   src
  build-depends:    base >= 4 && < 5,
                    data-lens,
                    hxt,
                    text-format-simple

executable cmdoh
  main-is:          cmdoh.hs
  hs-source-dirs:   src, tools
  ghc-options:      -Wall
                    -fno-warn-missing-signatures
                    -fno-warn-name-shadowing
  build-depends:    base >= 4 && < 5,
                    data-lens,
                    hxt,
                    cmdargs,
                    pretty-show,
                    text-format-simple

executable fetch-haskell
  main-is:          fetch-haskell.hs
  hs-source-dirs:   src, tests
  ghc-options:      -Wall
                    -fno-warn-missing-signatures
                    -fno-warn-name-shadowing
  build-depends:    base >= 4 && < 5,
                    data-lens,
                    hxt,
                    hxt-curl,
                    pretty-show,
                    text-format-simple

executable read-haskell
  main-is:          read-haskell.hs
  hs-source-dirs:   src, tests
  ghc-options:      -Wall
                    -fno-warn-missing-signatures
                    -fno-warn-name-shadowing
  build-depends:    base >= 4 && < 5,
                    data-lens,
                    hxt,
                    pretty-show,
                    text-format-simple

test-suite tests
  type:             exitcode-stdio-1.0     
  main-is:          Main.hs
  hs-source-dirs:   src, tests
  ghc-options:      -Wall
                    -fno-warn-name-shadowing
  build-depends:    base >= 4 && < 5,
                    data-lens,
                    hxt,
                    text-format-simple,
                    test-framework,
                    test-framework-quickcheck2,
                    QuickCheck
